# renderer

./: .gitmodules  CMakeLists.txt
assets/shaders/: test.glsl  triangle.glsl
shaders/: compile.sh
src/: CMakeLists.txt  main.c  math.c  resource_system.c  resource_system.h
src/memory/: pool_allocator.h
src/rendering/: renderer.c  renderer.h  renderer_internal.h
src/rendering/directx_renderer/: directx_context.h
src/rendering/vulkan_renderer/: vulkan_command_buffer.c  vulkan_command_buffer.h  vulkan_context.h  vulkan_device.c  vulkan_device.h  vulkan_fence.c  vulkan_fence.h  vulkan_framebuffer.c  vulkan_framebuffer.h  vulkan_image.c  vulkan_image.h  vulkan_internal.h  vulkan_pipeline.c  vulkan_pipeline.h  vulkan_renderer.c  vulkan_renderer.h  vulkan_renderpass.c  vulkan_renderpass.h  vulkan_swapchain.c  vulkan_swapchain.h  vulkan_types.h
